# mcp_a2a_agent_system

./: README.md  makefile  pyproject.toml
agents/host_agent/: __main__.py
agents/post_design_agent/: __main__.py
app/: chat_ai.py  cmd.py
mcp_server/: math_mcp_server.py
utilities/: config.py
